cargo-features = ["panic-immediate-abort"]

[package]
name = "atcoder-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
cp-library-rs = { git = "https://github.com/kentakom1213/cp-library", branch = "feature/target-wasm" }
num = "=0.4.3"
num-traits = "=0.2.19"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "immediate-abort"
strip = "symbols"
debug = 0
